src/client/chrome/css/app.css
/* ... */
.url-bar-category-times:hover{
  color: $watermelon;
}

.url{
  color: $banana;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 95%;
  font-size: 15px;
}

.url:hover {
  color: $base-white;
}

.url-categories{
  display: flex;
  float:right;
  overflow: auto;
  margin-right: 1%;
  width: 45%;
}

.lookback-container{
  width: 95%;
  height: calc(100% - 250px);
  overflow: scroll;
  background-color: white;
  /*top, right, bottom, left*/
  margin: 5px 30px 5px 30px;
  border:solid 1px $electric-blue;
  position:absolute;
  min-width: 800px;
}

.domain-info {
  padding-left: 5px;
  padding-right: 5px;
}

.lookback-graph-container{
  min-width: 800px;
  flex-grow: 1;
}

.lookback-details-container{
  text-align: center;
  position: relative;
  padding: 10px;
  width: 100%;
  height: 125px;
  background-color: $canteloupe;
  min-width: 400px;
  color: $base-white;
  .h4{
    color: $canteloupe;
    margin: 5px;
  }
  .p{
    margin-right: 30px;
  }
}

/*BUTTONS*/
#back-button{
  border: 0;
  background: $electric-blue;
  border-radius: 4px;
  color: $base-white;
  font-size: 15;
  transition-duration: 0.4s;
  margin-right: 5px;
  margin-left: 5px;
  height: 27px;
}

#back-botton:hover {
    background: red;
    color: red;
}

.side-bar-title{
  text-align: center;
  padding: 10px;
  font-weight: bold;
  color: $base-white;
  background-color: $canteloupe;
  font-size: large;

}

.side-bar-container{
  color: $canteloupe;
  display: inline-block;
  width: 18%;
  height: 100%;
  background-color: $base-white;
  border: solid 3px $canteloupe;
  border-top: 0px;
  overflow-y: scroll;
}

.hide-overflow{
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.domain-bar{
  height: 22px;
  border: solid 1px $electric-blue;
  color: $canteloupe;
  display:inline-block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 1px;
  border-radius: 2px;
  padding: 0 2px;
  position:flex;
  z-index: 10;
  min-width: 24px;
  &:hover {
    border-color: $canteloupe;
  }
}

.domain-favicon {
  width: 15px;
  height: 15px;
  margin-bottom: 4px;
  margin-right: 8px;
}

.display-favicon {
  width:25px;
  height:25px;
  margin-right: 10px;
}

.flex-row{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.previousPath {
  border-color: $banana;
}

start-time-label .end-time-label{
  font-size: 15;
  color: $electric-blue;
  width: auto;
}

.site-title{
  font-size: 35px;
  margin-right: 15px;
  color: $base-white;
  font-weight: bold;
  font-family: 'Poiret One', cursive;
}

.search-results-container {
  width: 80%;
  height: 97%;
  margin: 5px auto;
  overflow: scroll;
}

.categories-page {
  height: 92.5vh;
  display: flex;
  flex-direction: row;
}
#graph-plus-buttons{
  display: flex;
  width: 100%;
  position: absolute;
  height: 100%;
  justify-content: space-between;
}

.vertical-axis-label {
  width:35px;
  /*transform: rotate(270deg);
  transform-origin: left top 0;
  font-size: 20;
  position: absolute;
  top: 600px;*/
}

.time-labels{
  margin-left: 30px;
  margin-right: 15px;
  margin-top: 10px;
  margin-bottom: 10px;
  height: 40px;
  min-width: 800px;
  display: flex;
  flex-direction: row;
  align-items: center;
}
#time-break-min-box-left{
  position:relative;
  float:left;
  width:calc(33% - 190px);
  min-width:1px;
}

#time-break-min-box-right{
  position:relative;
  float:left;
  width:26%;
  min-width:1px;
}

#time-break-line-label1, #time-break-line-label2{
  position: relative;
}


#end-date-label{
  margin-left: auto;
}

#time-break-container{
  height:100%;
  width:100%;
  z-index:1;
  position:absolute;
  display: flex;
}

#tabs-container{
  height:100%;
  width:100%;
  z-index:10;
  position:relative;
}

.time-break-line{
  height:100%;
  border-right: 1px solid $banana;
  position:relative;
  z-index: 1;
}

#first-time-break{
  width: 33%;
  float:left;
}

#second-time-break{
  width: 33%;
  float: left;
}


.nav-bar-button {
  border: none;
  background-color: $electric-blue;
  color: $banana;
  margin: 10px;
  margin-top: 15px;
  font-size: medium;
  padding: 0px;
  outline: none;
}
.nav-bar-button:hover {
  color: $base-white;
}
.nav-bar-button-selected {
  color: $base-white;
  border-bottom: solid $base-white 1px;
  padding: 0px;
}

.control-buttons{
  display: block;
  color: $canteloupe;
  font-weight: bold;
}

.checkbox {
  text-align: center;
}

.nav-bar-container {
  display: flex;
  justify-content: space-between;
  background-color: $electric-blue;
}

.nav-menu-bar {
  display: flex;
  width: 100%;
  justify-content: flex-start;
}

.search-bar {
  margin: 7px 10px;
  border-radius: 10px;
  border: none;
  min-width: 200px;
  height: 35px;
  padding: 10px;
  outline: none;
}
.blacklist-text-entry {
  margin: 3px 5px;
  border-radius: 4px;
  border: none;
  width: 98%;
}
.all-categories {
  overflow: scroll;
}

.section-title {
  font-size: 20px;
  margin: 10px;
  color: $canteloupe;
}

.selected-domain-bar {
  margin-top: 5%;
  width: 95%;
  border: $electric-blue solid;
  border-left:none;
  float: none;
  margin-left: 2%;
  margin-right: 2%;
  height: 100px;
  border-radius: 5px;
  display:absolute;
  flex-flow: row nowrap;
  z-index: inherit;
}

.page-bar{
  border-left: solid $electric-blue;
  height:100%;
  display:inline-block;
  margin: 0;
}

.close-detail-view-btn{
  float: right;
  margin-top: 10px;
  margin-right: 30px;
  border: #FAFAFA;
  background-color: #FAFAFA;
  padding-top: 0px;
  padding-bottom: 0px;
  vertical-align: middle;
  font-size: xx-large;
}

.category-entry-wrapper{
  width: 50%;
}

.domainBar-zoom-container{
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.hidden { display:none; }

.error_message { color: blue; }

.delete-category-button {
  float: right;
  color: $canteloupe;
  width: 15px;
  height: 25px;
  line-height: 25px;
}
/* ... */

